fix: added passencoder